# pongline

./: README.md
practica1/: CMakeLists.txt  changelog.txt
practica1/bot/: CMakeLists.txt  bot.cpp
practica1/include/: DatosMemCompartida.h  Esfera.h  Mundo.h  MundoCliente.h  MundoServidor.h  Raqueta.h  Socket.h
practica1/logger/: CMakeList.txt~  CMakeLists.txt  logger.c  logger.cpp  logger.c~
practica1/src/: CMakeLists.txt  Esfera.cpp  Mundo.cpp  MundoCliente.cpp  MundoServidor.cpp  Plano.cpp  Raqueta.cpp  Socket.cpp  Vector2D.cpp  cliente.cpp  servidor.cpp  tenis.cpp
