CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT (TENIS)

SET(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
SET(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}")


PROJECT (LOGGER)

SET(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/logger)

ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}")


PROJECT (BOT)

SET(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bot)

ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}")
